[package]
name = "grpc-benchmark-rust"
version = "0.1.0"
edition = "2021"
authors = ["Xurui Yan <xuryan@microsoft.com>"]
description = "gRPC Benchmark Tool in Rust"
license = "MIT"
repository = "https://github.com/yourusername/grpc-benchmark-rust"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
indicatif = "0.17"
futures = "0.3"

[build-dependencies]
tonic-build = "0.13" 