[workspace]
resolver = "2"
members = [
    "proto",
    "server",
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Xurui Yan <xuryan@microsoft.com>"]
description = "gRPC Benchmark Tool in Rust"
license = "MIT"
repository = "https://github.com/yourusername/grpc-benchmark-rust" 