[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC Benchmark Client"
license.workspace = true
repository.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
anyhow.workspace = true
indicatif.workspace = true
futures.workspace = true 