[package]
name = "proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC protocol definitions"
license.workspace = true
repository.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true 