[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC Benchmark Server"
license.workspace = true
repository.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1" 