[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC Benchmark Server"
license.workspace = true
repository.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio-stream.workspace = true 